@@ -603,6 +603,11 @@ if(typeof io !== "undefined"){
 
            liItem.html(`<span data-status='${msg.metadata.status_code}' class='${icon} mr-2'></span>${description}`);
 
+           if(msg.metadata !== null && msg.metadata.hasOwnProperty("metadata") && msg.metadata.metadata !== null && msg.metadata.metadata.hasOwnProperty("download_progress")){
+               let progress = msg.metadata.metadata["download_progress"].replace("rootfs: ", "");
+               liItem.html(`<span data-status='${msg.metadata.status_code}' class='${icon} mr-2'></span>${description} - ${progress}`);
+           }
+
            if(msg.metadata.err !== ""){
                $(liItem).data({
                    toggle: "tooltip",
